--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <input type="radio" name="r" id="r4">
       
       <div class="slide s1">
-         <img src="apple.jpg" alt="Изображение" class="img">
+         <img src="//apple.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="apple.jpg" alt="Изображение" class="img">
+         <img src="../docs/apple.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
          <img src="apple.jpg" alt="Изображение" class="img">
