--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       <input type="radio" name="r" id="r4">
       
       <div class="slide s1">
-         <img src="apple.jpg" alt="Изображение" class="img">
+         <img src="../blob/docs/apple.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="apple.jpg" alt="Изображение" class="img">
+         <img src="./blob/docs/apple.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="apple.jpg" alt="Изображение" class="img">
+         <img src="../docs/apple.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="apple.jpg" alt="Изображение" class="img">
+         <img src="/docs/apple.jpg" alt="Изображение" class="img">
       </div>
 	  
    </div>
