--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  
  <body class="body">
   <div class="content" style="background-image: radial-gradient(circle, #ffffff, #e3e3e3, #f5f7f7);">
-  dddddddddddddddddddddddd1111ddddddddddddddddddddd<img src="img/slow.jpg" alt="Изображение"><img src="../slow.jpg" alt="Изображение"><img src="/slow.jpg" alt="Изображение">
+  dddddddddddddddddddddddd1111ddddddddddddddddddddd<img src="https://github.com/ITJ66/itj.github.io/blob/cd4d41912e80d5a3163cff1cb3102f296fd74cdd/slow.jpg" alt="Изображение"><img src="../slow.jpg" alt="Изображение"><img src="/slow.jpg" alt="Изображение">
    <header>   
 <h1>Новости Екатеринбурга</h1>   
    </header>
