--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  
  <body class="body">
   <div class="content" style="background-image: radial-gradient(circle, #ffffff, #e3e3e3, #f5f7f7);">
-  dddddddddddddddddddddddd1111ddddddddddddddddddddd<img src="main/img/pic.jpg" alt="Изображение"><img src="../slow.jpg" alt="Изображение"><img src="/slow.jpg" alt="Изображение">
+ 123<img src="main/img/pic.jpg" alt="Изображение">
    <header>   
 <h1>Новости Екатеринбурга</h1>   
    </header>
