--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
  
  <body class="body">
   <div class="content" style="background-image: radial-gradient(circle, #ffffff, #e3e3e3, #f5f7f7);">
- 000<img src="https://cloud.mail.ru/public/My6V/TecRiT68e/" alt="Изображение">
+ 
    <header>   
 <h1>Новости Екатеринбурга</h1>   
    </header>
    <div class="txt">Цирковое шоу с участием 12 роботов создали инженеры пермской робототехнической компании «Промобот» и Российская государственная 
    цирковая компания.</div>
+   
+  <p> <div style="background-image: url('https://images.wallpaperscraft.ru/image/single/liliia_buton_makro_1297898_1280x720.jpg');">ffffff<img src="pic.jpg"></div>
    <footer>
    </footer>
 <div>
@@ -31,16 +33,16 @@
       <input type="radio" name="r" id="r4">
       
       <div class="slide s1">
-         <img src="img/apple.jpg" alt="Изображение" class="img">
+         <img src="apple.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="img/apple.jpg" alt="Изображение" class="img">
+         <img src="apple.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="img/apple.jpg" alt="Изображение" class="img">
+         <img src="apple.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="img/apple.jpg" alt="Изображение" class="img">
+         <img src="apple.jpg" alt="Изображение" class="img">
       </div>
 	  
    </div>
