--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <div class="txt">Цирковое шоу с участием 12 роботов создали инженеры пермской робототехнической компании «Промобот» и Российская государственная 
    цирковая компания.</div>
    
-  <p> <div style="background-image: url('https://images.wallpaperscraft.ru/image/single/liliia_buton_makro_1297898_1280x720.jpg');">ffffff<img src="pic.jpg"></div>
+  <p> <div style="height: 350px; background-image: url('https://images.wallpaperscraft.ru/image/single/liliia_buton_makro_1297898_1280x720.jpg');">ffffff</div>
    <footer>
    </footer>
 <div>
