--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <input type="radio" name="r" id="r4">
       
       <div class="slide s1">
-         <img src="apple.jpg" alt="Изображение" class="img">
+         <img src="https://images.wallpaperscraft.ru/image/single/liliia_buton_makro_1297898_1280x720.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
          <img src="apple.jpg" alt="Изображение" class="img">
