--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
       <input type="radio" name="r" id="r4">
       
       <div class="slide s1">
-         <img src="https://images.wallpaperscraft.ru/image/single/liliia_buton_makro_1297898_1280x720.jpg" alt="Изображение" class="img">
+         <img src="https://cdn.basicdecor.ru/files/media/product_photos/3a/2243010/big/zhannakogan034_2.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="apple.jpg" alt="Изображение" class="img">
+         <img src="https://i.pinimg.com/550x/4d/a7/b1/4da7b14410b9079be48608b9baa3ebd8.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="apple.jpg" alt="Изображение" class="img">
+         <img src="https://masterpiecer-images.s3.yandex.net/467ba14a680711ee9b26d20dae950626:upscaled" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="apple.jpg" alt="Изображение" class="img">
+         <img src="https://www.izocenter.ru/assets/images/content/articles/286/img-dmitrij-annenkov-vedro-s-yablokami.jpg?v=2019-08-31" alt="Изображение" class="img">
       </div>
 	  
    </div>
