--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          <img src="https://cdn.basicdecor.ru/files/media/product_photos/3a/2243010/big/zhannakogan034_2.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="https://i.pinimg.com/550x/4d/a7/b1/4da7b14410b9079be48608b9baa3ebd8.jpg" alt="Изображение" class="img">
+         <img src="https://artnow.ru/img/1193000/1193733.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
          <img src="https://masterpiecer-images.s3.yandex.net/467ba14a680711ee9b26d20dae950626:upscaled" alt="Изображение" class="img">
