--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          <img src="https://masterpiecer-images.s3.yandex.net/467ba14a680711ee9b26d20dae950626:upscaled" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="https://www.izocenter.ru/assets/images/content/articles/286/img-dmitrij-annenkov-vedro-s-yablokami.jpg?v=2019-08-31" alt="Изображение" class="img">
+         <img src="https://www.vinterier.ru/pictures/shop/phruktovyiy-natyurmort-kartina-maslom-25x20.jpg" alt="Изображение" class="img">
       </div>
 	  
    </div>
