--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <img src="https://artnow.ru/img/1193000/1193733.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="https://masterpiecer-images.s3.yandex.net/467ba14a680711ee9b26d20dae950626:upscaled" alt="Изображение" class="img">
+         <img src="https://images.joseartgallery.com/106267/conversions/still-life-painting-autumn-still-life-jug-apples-thumb1920.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
          <img src="https://www.vinterier.ru/pictures/shop/phruktovyiy-natyurmort-kartina-maslom-25x20.jpg" alt="Изображение" class="img">
