--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <input type="radio" name="r" id="r4">
       
       <div class="slide s1">
-         <img src="https://cdn.basicdecor.ru/files/media/product_photos/3a/2243010/big/zhannakogan034_2.jpg" alt="Изображение" class="img">
+         <img src="https://flomaster.top/o/uploads/posts/2024-02/1708505990_flomaster-top-p-natyurmort-yabloko-i-grusha-vkontakte-risu-1.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
          <img src="https://artnow.ru/img/1193000/1193733.jpg" alt="Изображение" class="img">
@@ -42,7 +42,7 @@
          <img src="https://images.joseartgallery.com/106267/conversions/still-life-painting-autumn-still-life-jug-apples-thumb1920.jpg" alt="Изображение" class="img">
       </div>
       <div class="slide">
-         <img src="https://www.vinterier.ru/pictures/shop/phruktovyiy-natyurmort-kartina-maslom-25x20.jpg" alt="Изображение" class="img">
+         <img src=" https://cdn.basicdecor.ru/files/media/product_photos/3a/2243010/big/zhannakogan034_2.jpg" alt="Изображение" class="img">
       </div>
 	  
    </div>
@@ -139,19 +139,7 @@
 </div>
 
  </div>  
- </div>
-
-
-
-
-
-
-
-
-
-
-
- 
+ </div> 
 <div style="margin-top: 100px;"  id="footer">
   <div class="all-symbols">
  <a target="_blank" href="https://vk.com/feed">
