--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
  <head>
     <meta charset="utf-8">
-	<link rel="stylesheet" href="index-css.css">  <!-- stylesheet - файл является таблицей стилей -->
+	<link rel="stylesheet" href="styles-itj.css">  <!-- stylesheet - файл является таблицей стилей -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- дает браузеру инструкции о том, как для управления размерами и масштабированием страницы.-->
     <title>Домашняя страница - Екатеринбург</title>    
     <meta name="description" content="">   	
@@ -11,41 +11,21 @@
  </head>
  
  <body class="body">
-    <div class="content" style="background-image: radial-gradient(circle, #ffffff, #e3e3e3, #f5f7f7);">
-		<header>   
-			<h1>Новости Екатеринбурга</h1>   
-		</header>
-    <section>
-     <table>
-	    <tr>
-			<td>
-			<article>
-				<h2>First article</h2>
-					<p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
-			</article>
-			</td>
-			<td>
-			<article>
-				<h2>First article</h2>
-					<p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
-			</article>
-			</td>
-			<td>
-			<article>
-				<h2>First article</h2>
-					<p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
-			</article>
-			</td>
-		</tr>
-	  </table>
-</section>
-<div style="padding-top: 50px;">
+  <div class="content" style="background-image: radial-gradient(circle, #ffffff, #e3e3e3, #f5f7f7);">
+ 
+   <header>   
+      <h1>Новости Екатеринбурга</h1>   
+   </header>
+   
+   <div class="txt">Цирковое шоу с участием 12 роботов создали инженеры пермской робототехнической компании «Промобот» и Российская государственная 
+   цирковая компания.</div>
+   
+   <!-- <p><div style="height: 350px; background-image: url('https://images.wallpaperscraft.ru/image/single/liliia_buton_makro_1297898_1280x720.jpg');">ffffff</div>
+    -->
+   
+   
 <section>
-     <table>
-	    <tr>
-			<td colspan="3">
-			<article>
-				<p><div class="slider middle">
+  <p><div class="slider middle">
 		<div class="slides">
 			<input type="radio" name="r" id="r1" checked>
 			<input type="radio" name="r" id="r2">
@@ -71,82 +51,112 @@
 			<label for="r3" class="bar"></label>
 			<label for="r4" class="bar"></label>
 		</div>
-	</div>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
-	Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
+	</div>
+</section>
+
+<section>
+     <table>
+	    <tr>
+			<td>
+			<article>
+				<h2>First article</h2>
+					<p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
 			</article>
 			</td>
 			<td>
+			<article>
+				<h2>First article</h2>
+					<p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
+			</article>
 			</td>
 			<td>
+			<article>
+				<h2>First article</h2>
+					<p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
+			</article>
 			</td>
 		</tr>
 	  </table>
 </section>
+
+<!--
+<p><table>
+<tr>
+<td valign="top">
+<picture>
+  <a href=""><source media="(max-width: 799px)" srcset="picture-180.jpg" />
+  <source media="(min-width: 800px)" srcset="picture-350.jpg" />
+  <img style="width:350px; height:244px; margin-right: 10px; margin-left: 10px; margin-top: 25px; float: left;" src="picture-350.jpg"  alt="картинка" />
+  </picture> 
+ </a></td>
+<td class="text-content" valign="top">
+<ul class="markers">
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+</ul>
+</td>
+<td class="text-content" valign="top" style="padding-top: 25px;">
+Книжный фестиваль «Красная строка» впервые состоялся в Екатеринбурге в 2023 году. Тогда всего за три дня фест собрал более 38 тысяч зрителей, 
+110 издательств и 80 спикеров. Проект реализуется при поддержке мэрии Екатеринбурга. Всего фестиваль проходит на 35 площадках. 
+Гостями «Красной строки» стали известные российские писатели: Алексей Иванов, Алексей Варламов, Ася Лавринович, Ксения Буржская, Иван Шипнигов,
+Екатерина Манойло, Антон Секисов, Вера Богданова и многие другие. Книжный фестиваль «Красная строка» впервые состоялся в Екатеринбурге в 2023 году. Тогда всего за три дня фест собрал более 38 тысяч зрителей, 110 издательств и 80 спикеров. Проект реализуется при поддержке мэрии Екатеринбурга. Всего фестиваль проходит на 35 площадках. Гостями «Красной строки» стали известные российские писатели: Алексей Иванов, Алексей Варламов, Ася Лавринович, Ксения Буржская, Иван Шипнигов, Екатерина Манойло, Антон Секисов, Вера Богданова и многие другие. Книжный фестиваль «Красная строка» впервые состоялся в Екатеринбурге в 2023 году. 
+Тогда всего за три дня фест собрал более 38 тысяч зрителей, 110 издательств и 80 спикеров. Проект реализуется при поддержке мэрии Екатеринбурга.
+</td>
+</tr>
+</table>
+-->
+<p><div align="center">
+<div class="content-box">
+	<div class="text">Важные события</div> 
+	<ul style="padding-top: 10px;" class="markers txt">
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+<li>Антон Секисов, Вера Богданова;</li>
+</ul>
+	
+	
+	
+	<p>Всего фестиваль проходит на 35 площадках. Гостями «Красной строки» стали известные российские писатели: Алексей Иванов, Алексей Варламов, Ася Лавринович, Ксения Буржская, Иван Шипнигов, Екатерина Манойло, Антон Секисов, Вера Богданова и многие другие. Книжный фестиваль «Красная строка» впервые состоялся в Екатеринбурге в 2023 году. Тогда всего за три дня фест собрал более 38 тысяч зрителей, 110 издательств и 80 спикеров. Проект реализуется при поддержке мэрии Екатеринбурга. Всего фестиваль проходит на 35 площадках. Гостями «Красной строки» стали известные российские писатели: Алексей Иванов, Алексей Варламов, Ася Лавринович, Ксения Буржская, Иван Шипнигов, Екатерина Манойло, Антон Секисов, Вера Богданова и многие другие. 
+	<p><div class="text">Важные события</div> </p>
+	<p>Книжный фестиваль «Красная строка» впервые состоялся в Екатеринбурге в 2023 году. Тогда всего за три дня фест собрал более 38 тысяч зрителей, 
+				110 издательств и 80 спикеров. Проект реализуется при поддержке мэрии Екатеринбурга. Всего фестиваль проходит на 35 площадках. 
+				Гостями «Красной строки» стали известные российские писатели: Алексей Иванов, Алексей Варламов, Ася Лавринович, Ксения Буржская, Иван Шипнигов,
+				Екатерина Манойло, Антон Секисов, Вера Богданова и многие другие. </p>
+				
+				<p>Книжный фестиваль «Красная строка» впервые состоялся в Екатеринбурге в 2023 году. Тогда всего за три дня фест собрал более 38 тысяч зрителей, 110 издательств и 80 спикеров. Проект реализуется при поддержке мэрии Екатеринбурга. Всего фестиваль проходит на 35 площадках. Гостями «Красной строки» стали известные российские писатели: Алексей Иванов, Алексей Варламов, Ася Лавринович, Ксения Буржская, Иван Шипнигов, Екатерина Манойло, Антон Секисов, Вера Богданова и многие другие. Книжный фестиваль «Красная строка» впервые состоялся в Екатеринбурге в 2023 году. 
+				Тогда всего за три дня фест собрал более 38 тысяч зрителей, 110 издательств и 80 спикеров. Проект реализуется при поддержке мэрии Екатеринбурга.
+	</p>
 </div>
-		<p><div style="margin-top: 10px;"  id="footer">
-			<div class="all-symbols">
-				<a target="_blank" href="https://vk.com/feed"><img src="vk1.png" class="symbol" alt="VK icon"></a>
-			</div>
-		</div> 
-	</div>
+
+ </div>  
+ </div>
+
+
+
+
+
+
+
+
+
+
+
+ 
+<div style="margin-top: 100px;"  id="footer">
+  <div class="all-symbols">
+ <a target="_blank" href="https://vk.com/feed">
+ <img src="vk1.png" class="symbol" alt="VK icon"></a>
+</div>
+</div> 
+ </div>
  </body>
 </html>
