--- a/index.html
+++ b/index.html
@@ -272,6 +272,12 @@
 								<li>Украшение интерьера и создание яблочных композиций.</li>
 							</ul>
 			</article>
+			<article>
+			   <div align="center">&nbsp;</div>			
+			</article>
+			<article>
+			   <div align="center">&nbsp;</div>			
+			</article>
 		</section>
 		
 </main>
