--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
 							</ul>
 			</article>
 			<article>
-			   <div align="center">&nbsp;</div>			
+			   <div align="center" style="padding-top: 10px; padding-bottom: 10px; background-color: #AFD275;">1&nbsp;</div>			
 			</article>
 			<article>
-			   <div align="center">&nbsp;</div>			
+			   <div align="center" style="padding-top: 10px; padding-bottom: 10px; background-color: #AFD275;">2&nbsp;</div>			
 			</article>
 		</section>
 		
