--- a/index.html
+++ b/index.html
@@ -89,40 +89,40 @@
 				</thead>
 				<tbody>
 					<tr>
-					 <td><div class="td ya4eiki">Витамин A</div></td>
-					 <td><div class="td ya4eiki">3,0 мкг	</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Витамин A</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">3,0 мкг	</div></td>
 				    </tr>
 				    <tr>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Бета-каротин</div></td>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">27,0 мкг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki">Витамин E</div></td>
-					 <td><div class="td ya4eiki">0,2 мг</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Витамин E</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">0,2 мг</div></td>
 				    </tr>
 				    <tr>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Витамин K</div></td>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">2,2 мкг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki">Витамин C</div></td>
-					 <td><div class="td ya4eiki">4,6 мг</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Витамин C</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">4,6 мг</div></td>
 				    </tr>
 				    <tr>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Витамин B3</div></td>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">0,1 мг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki">Витамин B4</div></td>
-					 <td><div class="td ya4eiki">3,4 мг</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Витамин B4</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">3,4 мг</div></td>
 				    </tr>
 				    <tr>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Витамин B5</div></td>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">0,1 мг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki">Витамин B9</div></td>
-					 <td><div class="td ya4eiki">3,0 мкг</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Витамин B9</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">3,0 мкг</div></td>
 				    </tr>
 					<tr>
 					 <td colspan="2"><div class="zag-table">II. Минеральный состав</div></td>
@@ -132,32 +132,32 @@
 					 <th><div class="th ya4eiki">Содержание</div></th>
 					</tr>
 				    <tr>
-					 <td><div class="td ya4eiki">Кальций</div></td>
-					 <td><div class="td ya4eiki">6,0 мг</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Кальций</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">6,0 мг</div></td>
 				    </tr>
 				    <tr>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Железо</div></td>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">0,1 мг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki">Магний</div></td>
-					 <td><div class="td ya4eiki">5,0 мг</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Магний</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">5,0 мг</div></td>
 				    </tr>
 					 <tr>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Фосфор</div></td>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">11,0 мг</div></td>
 				    </tr>
 					 <tr>
-					 <td><div class="td ya4eiki">Калий</div></td>
-					 <td><div class="td ya4eiki">107,0 мг</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Калий</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">107,0 мг</div></td>
 				    </tr>
 					 <tr>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Натрий</div></td>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">1,0 мг	</div></td>
 				    </tr>
 					<tr>
-					 <td><div class="td ya4eiki">Цинк</div></td>
-					 <td><div class="td ya4eiki">1,0 мг	</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Цинк</div></td>
+					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">1,0 мг	</div></td>
 				    </tr>
 					<tr>
 					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Фтор</div></td>
