--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
 				</div>
 			</div>
 			</p>	
-			<h1>Яблоки: источник энергии для детей и взрослых</h1>
+			
 		</main>
-		<!--КОНТЕНТ - ТЕКСТОВЫЙ БЛОК-->        
+		<!--КОНТЕНТ - ТЕКСТОВЫЙ БЛОК-->   
+<div class="container centrirovanie">		
+		<h1>Яблоки: источник энергии для детей и взрослых</h1>
 		<section>
 			<article>
 			   <img width="350px" align="left" style="margin-left: 30px; margin-right: 30px; padding-left: 30px; padding-right: 30px; padding-bottom: 10px;" src="https://cs11.pikabu.ru/post_img/big/2020/08/10/9/1597074863163914725.jpg" alt="картина акварелью с яблоками" title="изображение яблок">
@@ -69,7 +71,7 @@
 						<p>Любопытно, что национальными блюдами из этого сладкого плода сегодня лакомятся в разных уголках мира, популярны среди них: австрийский «Штрудель», французская «Шарлотка», украинский суп «Ябчанка», китайский десерт «Яблоки в карамели», итальянский пирог «Torta di mele» и, конечно же, русский десерт «Яблочный самбук».</p>
 			</article>
 		</section>
-		
+</div>		
 		
 		
 		<div id="1" style="margin-bottom: 25px;" class="zag">
