--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 		<!--КОНТЕНТ - ТЕКСТОВЫЙ БЛОК-->   
 <div class="container centrirovanie">		
 		<h1>Яблоки: источник энергии для детей и взрослых</h1>
-		<section>
+		<section style="margin-left: 10px; margin-right: 10px;">
 			<article>
-			   <img width="350px" align="left" style="margin-left: 30px; margin-right: 30px; padding-left: 30px; padding-right: 30px; padding-bottom: 10px;" src="https://cs11.pikabu.ru/post_img/big/2020/08/10/9/1597074863163914725.jpg" alt="картина акварелью с яблоками" title="изображение яблок">
+			   <img width="350px" align="left" style="padding-left: 30px; padding-right: 30px; padding-bottom: 10px;" src="https://cs11.pikabu.ru/post_img/big/2020/08/10/9/1597074863163914725.jpg" alt="картина акварелью с яблоками" title="изображение яблок">
                         Наверное, трудно будет отыскать другой фрукт с такой же богатой историей.
 						<p>Первые упоминания о нём содержались ещё в Библии.  Яблоками «наполнена» античная, скандинавская и славянская мифология. Шедевры с выразительным фруктовым образом для нас сотворили художники, скульпторы, музыканты, поэты и писатели.</p>
 						<p>Точное время происхождения слова до сих пор не известно, в русском языке оно уходит глубоко корнями в древность. Считается, что родина современного фрукта на территории Казахстана в горах Тянь-Шань. Согласно статистике за 2022 год, в мире ежегодно производят  89 миллионов их тонн.</p>
