--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </section>
 		
 		
-		<div id="1" style="margin-bottom: 25px;" class="zag">
+		<div id="1" class="zag">
 		    Каких витаминов и минералов больше всего?
 		</div>	
 		
