--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
 			
 		</main>
 		<!--КОНТЕНТ - ТЕКСТОВЫЙ БЛОК-->   
-<section class="column">		
+<div>		
 		<h1>Яблоки: источник энергии для детей и взрослых</h1>
 		<article>
-			   <img width="350px" align="left" style="margin-top: 20px; padding-left: 30px; padding-right: 30px; padding-bottom: 10px;" 
+			   <img width="350px" align="left" style="padding-left: 30px; padding-right: 30px;  padding-bottom: 30px;" 
 			   src="https://cs11.pikabu.ru/post_img/big/2020/08/10/9/1597074863163914725.jpg" alt="Картина акварелью с яблоками" title="изображение яблок">
-                        Наверное, трудно будет отыскать другой фрукт с такой же богатой историей.
-			<br>Первые упоминания о нём содержались ещё в Библии.  Яблоками «наполнена» античная, скандинавская и славянская мифология. Шедевры с выразительным фруктовым образом для нас сотворили художники, скульпторы, музыканты, поэты и писатели.
-			<br>Точное время происхождения слова до сих пор не известно, в русском языке оно уходит глубоко корнями в древность. Считается, что родина современного фрукта на территории Казахстана в горах Тянь-Шань. Согласно статистике за 2022 год, в мире ежегодно производят  89 миллионов их тонн.
-			<br>Любопытно, что национальными блюдами из этого сладкого плода сегодня лакомятся в разных уголках мира, популярны среди них: австрийский «Штрудель», французская «Шарлотка», украинский суп «Ябчанка», китайский десерт «Яблоки в карамели», итальянский пирог «Torta di mele» и, конечно же, русский десерт «Яблочный самбук».
+            <p>Наверное, трудно будет отыскать другой фрукт с такой же богатой историей.</p>
+			<p>Первые упоминания о нём содержались ещё в Библии.  Яблоками «наполнена» античная, скандинавская и славянская мифология. Шедевры с выразительным фруктовым образом для нас сотворили художники, скульпторы, музыканты, поэты и писатели.</p>
+			<p>Точное время происхождения слова до сих пор не известно, в русском языке оно уходит глубоко корнями в древность. Считается, что родина современного фрукта на территории Казахстана в горах Тянь-Шань. Согласно статистике за 2022 год, в мире ежегодно производят  89 миллионов их тонн.</p>
+			<p>Любопытно, что национальными блюдами из этого сладкого плода сегодня лакомятся в разных уголках мира, популярны среди них: австрийский «Штрудель», французская «Шарлотка», украинский суп «Ябчанка», китайский десерт «Яблоки в карамели», итальянский пирог «Torta di mele» и, конечно же, русский десерт «Яблочный самбук».</p>
 			</article>
-</section>
-		<div id="1" class="zag">
+</div>
+		<div id="1" class="zag" style="margin-top: 40px;">
 		    Каких витаминов и минералов больше всего?
 		</div>	
 		
@@ -79,88 +79,88 @@
 			<table class="table table-border">
 				<thead>
 					<tr>
-					 <td colspan="2"><div class="zag-table">I. Химический состав</div></td>
+					 <td colspan="2"><div class="zag-table td">I. Химический состав</div></td>
 				    </tr>
 					<tr>
-					 <th><div class="th ya4eiki">Витамины</div></th>
-					 <th><div class="th ya4eiki">Содержание</div></th>
+					 <th><div class="th">Витамины</div></th>
+					 <th><div class="th">Содержание</div></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Витамин A</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">3,0 мкг	</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">Витамин A</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">3,0 мкг	</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Бета-каротин</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">27,0 мкг</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">Бета-каротин</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">27,0 мкг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Витамин E</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">0,2 мг</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">Витамин E</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">0,2 мг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Витамин K</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">2,2 мкг</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">Витамин K</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">2,2 мкг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Витамин C</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">4,6 мг</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">Витамин C</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">4,6 мг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Витамин B3</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">0,1 мг</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">Витамин B3</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">0,1 мг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Витамин B4</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">3,4 мг</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">Витамин B4</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">3,4 мг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Витамин B5</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">0,1 мг</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">Витамин B5</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">0,1 мг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Витамин B9</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">3,0 мкг</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">Витамин B9</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">3,0 мкг</div></td>
 				    </tr>
 					<tr>
-					 <td colspan="2"><div class="zag-table">II. Минеральный состав</div></td>
+					 <td colspan="2"><div class="zag-table td">II. Минеральный состав</div></td>
 				    </tr>
 					<tr>
-					 <th><div class="th ya4eiki">Минералы</div></th>
-					 <th><div class="th ya4eiki">Содержание</div></th>
+					 <th><div class="th">Минералы</div></th>
+					 <th><div class="th">Содержание</div></th>
 					</tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Кальций</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">6,0 мг</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">Кальций</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">6,0 мг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Железо</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">0,1 мг</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">Железо</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">0,1 мг</div></td>
 				    </tr>
 				    <tr>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Магний</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">5,0 мг</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">Магний</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">5,0 мг</div></td>
 				    </tr>
 					 <tr>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Фосфор</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">11,0 мг</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">Фосфор</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">11,0 мг</div></td>
 				    </tr>
 					 <tr>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Калий</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">107,0 мг</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">Калий</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">107,0 мг</div></td>
 				    </tr>
 					 <tr>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Натрий</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">1,0 мг	</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">Натрий</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">1,0 мг	</div></td>
 				    </tr>
 					<tr>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">Цинк</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #d9d9d9;">1,0 мг	</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">Цинк</div></td>
+					 <td><div class="td" style="background-color: #d9d9d9;">1,0 мг	</div></td>
 				    </tr>
 					<tr>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">Фтор</div></td>
-					 <td><div class="td ya4eiki" style="background-color: #cccdce;">3,3 мкг</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">Фтор</div></td>
+					 <td><div class="td" style="background-color: #cccdce;">3,3 мкг</div></td>
 				    </tr>
 				 </tbody>
 			</table>
