--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
  <head>
     <meta charset="utf-8">
-	<link rel="stylesheet" href="1.css">  <!-- stylesheet - файл является таблицей стилей -->
+	<link rel="stylesheet" href="frut.css">  <!-- stylesheet - файл является таблицей стилей -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- дает браузеру инструкции о том, как для управления размерами и масштабированием страницы.-->
     <title>Яблоки: история, состав и польза для здоровья.</title>    
     <meta name="description" content="Интересная информация о яблоках. Состав и область применения.">   	
@@ -63,7 +63,7 @@
 <div>		
 		<h1>Яблоки: источник энергии для детей и взрослых</h1>
 		<article>
-			   <img width="350px" align="left" style="padding-left: 30px; padding-right: 30px;  padding-bottom: 30px;" 
+			   <img class="responsive" width="350px" align="left" style="padding-left: 30px; padding-right: 30px;  padding-bottom: 30px;" 
 			   src="https://cs11.pikabu.ru/post_img/big/2020/08/10/9/1597074863163914725.jpg" alt="Картина акварелью с яблоками" title="изображение яблок">
             <p>Наверное, трудно будет отыскать другой фрукт с такой же богатой историей.</p>
 			<p>Первые упоминания о нём содержались ещё в Библии.  Яблоками «наполнена» античная, скандинавская и славянская мифология. Шедевры с выразительным фруктовым образом для нас сотворили художники, скульпторы, музыканты, поэты и писатели.</p>
@@ -75,7 +75,7 @@
 		    Каких витаминов и минералов больше всего?
 		</div>	
 		
-		<section class="container-table">
+		<br><section class="container-table">
 			<table class="table table-border">
 				<thead>
 					<tr>
