--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 		    Каких витаминов и минералов больше всего?
 		</div>	
 		
-		<br><section class="container-table">
+		<section class="container-table">
 			<table class="table table-border">
 				<thead>
 					<tr>
-					 <td colspan="2"><div class="zag-table td">I. Химический состав</div></td>
+					 <td colspan="2"><div style="margin-top: 10px;" class="zag-table td">I. Химический состав</div></td>
 				    </tr>
 					<tr>
 					 <th><div class="th">Витамины</div></th>
