--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		</main>
 		<!--КОНТЕНТ - ТЕКСТОВЫЙ БЛОК-->   
 <div>		
-		<h1>Яблоки: источник энергии для детей и взрослых</h1>
+		<h1 style="justify-content: center;">Яблоки: источник энергии для детей и взрослых</h1>
 		<article style="justify-content: center;">
 			   <img class="responsive" width="350px" align="left" style="padding-left: 30px; padding-right: 30px;  padding-bottom: 30px;" 
 			   src="https://cs11.pikabu.ru/post_img/big/2020/08/10/9/1597074863163914725.jpg" alt="Картина акварелью с яблоками" title="изображение яблок">
