--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div>		
 		<h1 style="justify-content: center;">Яблоки: источник энергии для детей и взрослых</h1>
 		<article style="justify-content: center;">
-			   <img class="responsive" width="350px" align="left" style="padding-left: 30px; padding-right: 30px;  padding-bottom: 30px;" 
+			   <img class="responsive" width="300px" style="padding-left: 30px; padding-right: 30px;  padding-bottom: 30px;" 
 			   src="https://cs11.pikabu.ru/post_img/big/2020/08/10/9/1597074863163914725.jpg" alt="Картина акварелью с яблоками" title="изображение яблок">
             <p>Наверное, трудно будет отыскать другой фрукт с такой же богатой историей.</p>
 			<p>Первые упоминания о нём содержались ещё в Библии.  Яблоками «наполнена» античная, скандинавская и славянская мифология. Шедевры с выразительным фруктовым образом для нас сотворили художники, скульпторы, музыканты, поэты и писатели.</p>
