--- a/index.html
+++ b/index.html
@@ -60,17 +60,14 @@
 			
 		</main>
 		<!--КОНТЕНТ - ТЕКСТОВЫЙ БЛОК-->   
-<div>		
-		
-		<article style="justify-content: center;">
+<div style="justify-content: center;">		
 			<h1 style="justify-content: center;">Яблоки: источник энергии для детей и взрослых</h1>
 			   <img class="responsive" align="left" width="300px" style="margin-left: 10px; margin-right: 10px;  margin-bottom: 10px;" 
 			   src="https://cs11.pikabu.ru/post_img/big/2020/08/10/9/1597074863163914725.jpg" alt="Картина акварелью с яблоками" title="изображение яблок">
-            <p>Наверное, трудно будет отыскать другой фрукт с такой же богатой историей.</p>
+            		<p>Наверное, трудно будет отыскать другой фрукт с такой же богатой историей.</p>
 			<p>Первые упоминания о нём содержались ещё в Библии.  Яблоками «наполнена» античная, скандинавская и славянская мифология. Шедевры с выразительным фруктовым образом для нас сотворили художники, скульпторы, музыканты, поэты и писатели.</p>
 			<p>Точное время происхождения слова до сих пор не известно, в русском языке оно уходит глубоко корнями в древность. Считается, что родина современного фрукта на территории Казахстана в горах Тянь-Шань. Согласно статистике за 2022 год, в мире ежегодно производят  89 миллионов их тонн.</p>
 			<p>Любопытно, что национальными блюдами из этого сладкого плода сегодня лакомятся в разных уголках мира, популярны среди них: австрийский «Штрудель», французская «Шарлотка», украинский суп «Ябчанка», китайский десерт «Яблоки в карамели», итальянский пирог «Torta di mele» и, конечно же, русский десерт «Яблочный самбук».</p>
-			</article>
 </div>
 		<div id="1" class="zag" style="margin-top: 40px;">
 		    Каких витаминов и минералов больше всего?
