--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
 			
 		</main>
 		<!--КОНТЕНТ - ТЕКСТОВЫЙ БЛОК-->   
-		
+		<section>
+			<article>
 			<h1 style="justify-content: center;">Яблоки: источник энергии для детей и взрослых</h1>
 			<p>Наверное, трудно будет отыскать другой фрукт с такой же богатой историей.</p>
 			<p>Первые упоминания о нём содержались ещё в Библии.  Яблоками «наполнена» античная, скандинавская и славянская мифология. Шедевры с выразительным фруктовым образом для нас сотворили художники, скульпторы, музыканты, поэты и писатели.</p>
 			<p>Точное время происхождения слова до сих пор не известно, в русском языке оно уходит глубоко корнями в древность. Считается, что родина современного фрукта на территории Казахстана в горах Тянь-Шань. Согласно статистике за 2022 год, в мире ежегодно производят  89 миллионов их тонн.</p>
 			<p>Любопытно, что национальными блюдами из этого сладкого плода сегодня лакомятся в разных уголках мира, популярны среди них: австрийский «Штрудель», французская «Шарлотка», украинский суп «Ябчанка», китайский десерт «Яблоки в карамели», итальянский пирог «Torta di mele» и, конечно же, русский десерт «Яблочный самбук».</p>
-
+			</article>
+		</section>
 		<div id="1" class="zag" style="margin-top: 40px;">
 		    Каких витаминов и минералов больше всего?
 		</div>	
