--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			
 		</main>
 		<!--КОНТЕНТ - ТЕКСТОВЫЙ БЛОК-->   
-		<section>
+		<section width="60%">
 			<article>
 			<h1 style="justify-content: center;">Яблоки: источник энергии для детей и взрослых</h1>
 			<p>Наверное, трудно будет отыскать другой фрукт с такой же богатой историей.</p>
