--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
   <div class="cell">
     <ul class="ul-flex">
 		<li><div style="font-size: 85px; display: block; color: #C8C8C ;">1</div></li>
-		<li style=" display: block; margin-top: 20px; margin-left: 10px; margin-bottom: 10px; color: #C8C8C ;">Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст
-		Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст
-		Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст
-		Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст
+		<li style=" display: block; margin-top: 20px; margin-left: 10px; margin-bottom: 10px;">Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст
 		Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст Простой текст
 		</li>
 	</ul>
