--- a/x.html
+++ b/x.html
@@ -6,7 +6,7 @@
     <meta name="title" content="Пример заголовка">
 	<title>Название страницы</title>
     <meta name="description" content="">
-	<link rel="stylesheet" type="text/css" href="xstyle.css">
+	<link rel="stylesheet" type="text/css" href="1.css">
 </head>
 <body>
 <header>
